# MarFa

./: .gitignore  .replit  CHANGELOG.md  CI_TEST_TRIGGER.md  README.md  README_APK_ACCESS.md  TRIGGER_CI_BUILD.md  app.py  build.gradle.kts  deployment-status.md  detekt.yml  gradle.properties  gradlew.bat  mkdocs.yml  models.py  package-lock.json  package.json  pyproject.toml  replit.md  settings.gradle.kts  test-commit.txt  webhook-test-trigger.md
analysis/: hiddify_analyzer.py  rebranding_spec.py  xray_integration.py
app/: build.gradle.kts  detekt-baseline.xml  detekt.yml  google-services.json  owasp-suppressions.xml  proguard-rules.pro
app/src/main/cpp/wireguard/: CMakeLists.txt
attached_assets/: Pasted--AutoFixBot-404-Troubleshooting-Checklist-You-re-still-getting-HTTP-404-on-the-callback--1747988689953.txt  Pasted--AutoFixBot-Continuous-AI-Driven-CI-Remediation-Pipeline-Objective-Automatically-ca-1747942159754.txt  Pasted--AutoFixBot-Deployment-Operational-Guide-Goal-Transition-AutoFixBot-from-architecture-1747942709946.txt  Pasted--CI-Failure-Triage-23-May-2025-Scope-16-sequential-GitHub-Actions-runs-on-main-fail-1747948833343.txt  Pasted--CI-Re-validation-Immediate-Next-Steps-Goal-Confirm-that-the-new-app-module-struct-1747949111607.txt  Pasted--Identifying-the-Culprit-I-m-starting-by-acknowledging-the-primary-goal-pinpointing-the-code--1748016120621.txt  Pasted--MarFaNet-Android-Centric-Backlog-Next-Step-Plan-Post-GA-Scope-Freeze-cross-platf-1747936996834.txt  Pasted--Sprint-0-MarFaNet-v1-1-0-Planning-CI-Remediation-Purpose-Updated-Begin-gr-1747941609648.txt  (+74 more)
(+124 files in other folders)
